# kill-the-square

./: .gitignore  CMakeLists.txt  README.md  sdl-game.code-workspace  sdl-windows-build.sln  sdl-windows-build.vcxproj  sdl-windows-build.vcxproj.filters
misc/: ResourceManager.cpp  ResourceManager.h
notes/: Textures-Paths.txt
src/: Application.cpp  Character.cpp  Character.h  Game.cpp  Game.h  Window.cpp  Window.h  World.cpp  World.h  globals.h
src/utils/: Vector2d.h
x64/Debug/: sdl-windows-build.exe.recipe  sdl-windows-build.ilk  sdl-windows-build.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/sdl-wind.f6265d3f.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  sdl-windows-build.lastbuildstate
